# tahinis-pnl

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  TODO.md  docker-compose.yml  railway.beat.json  railway.beat.toml  railway.frontend.toml  railway.toml  railway.worker.json  railway.worker.toml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_document_pipeline.py  0003_toast_integration.py  0004_email_drive_sync.py  0005_expense_management.py  0006_reconciliation.py  0007_pnl_snapshots.py  0008_external_platforms.py  0009_ai_insights.py  0010_perf_indexes.py  0011_tenant_store_id.py  0012_location_store_id.py  0013_job_runs.py  0014_location_extended_fields.py  0015_google_reviews.py  0016_expense_date.py  0017_multi_location_admin.py  0018_location_onboarding.py  0019_pipeboard_accounts.py  0020_pipeboard_category_mappings.py  0021_pipeboard_campaigns.py  0022_pipeboard_daily_metrics_sync_jobs.py  0023_pipeboard_alerts_audit_logs.py  0024_fix_toast_item_prices_undo_divide_100.py  0025_password_reset_tokens.py  0026_google_ads_optimization.py  002_fix_toast_item_prices_undo_divide_100.py
backend/app/: __init__.py  main.py
backend/app/api/: errors.py  middleware.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/schemas/: ai_insight.py  auth.py  common.py  document.py  email_sync.py  expense.py  external_platform.py  google_ads_optimization_schemas.py  google_reviews.py  labor.py  location.py  pipeboard_schemas.py  pnl.py  reconciliation.py  tenant.py  toast.py
backend/app/services/: auth_service.py  document_service.py  email_service.py  google_ads_optimization_engine.py  storage_service.py  (+2 more)
backend/scripts/: onboard_dundas.py  onboard_store.py  pipeboard_probe.py  seed_dev.py
backend/tests/: conftest.py
(+219 files in other folders)
