[tool.poetry]
name = "tahinis-backend"
version = "0.1.5"
description = "Tahinis Restaurant Financial Intelligence Platform - Backend"
authors = ["Tahinis <naga.saranu@icloud.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = { extras = ["email"], version = "^2.9.0" }
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
celery = { extras = ["redis"], version = "^5.4.0" }
redis = "^5.2.0"
structlog = "^24.4.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = ">=3.2.0,<4.0.0"
python-multipart = "^0.0.17"
boto3 = "^1.35.0"
httpx = "^0.27.0"
tenacity = "^9.0.0"
flower = "^2.0.1"
cryptography = "^43.0.0"
pyotp = "^2.9.0"
anthropic = "^0.40.0"
slowapi = "^0.1.9"
reportlab = "^4.2.5"
google-cloud-documentai = "^2.29.0"
pymupdf = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
respx = "^0.21.0"
factory-boy = "^3.3.1"
httpx = "^0.27.0"
ruff = "^0.7.0"
black = "^24.10.0"
mypy = "^1.13.0"
types-passlib = "^1.7.7"
types-python-jose = "^3.3.4"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
